<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Settings_Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="?attr/screen_padding"
    android:paddingRight="?attr/screen_padding">

    <Button
        android:id="@+id/readAloud"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/play"
        android:color="#293411"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:contentDescription="@string/sample_text"
            android:gravity="center"
            android:letterSpacing="?attr/char_spacing"
            android:lineSpacingMultiplier="?attr/line_spacing"
            android:text="@string/sample_text_desc"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="?attr/font_size" />
        <!--style="@style/FontStyle.Text"/>-->


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/font_size_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/font_size_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/font_size"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/font_size"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/font_size_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/font_size_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/line_space_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/line_space_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/line_space"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/line_space"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/line_space_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/line_space_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/char_space_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/char_space_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/char_space"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/char_space"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/char_space_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/char_space_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/screen_padding_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/screen_padding_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/screen_padding"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/screen_padding"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/screen_padding_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/screen_padding_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/brightness_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/brightness_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/brightness"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/brightness"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/brightness_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/brightness_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/speaker_speed_d"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/speaker_speed_down_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_down_float"
                        android:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/speaker_speed"
                        android:gravity="center"
                        android:letterSpacing="?attr/char_spacing"
                        android:lineSpacingMultiplier="?attr/line_spacing"
                        android:text="@string/speaker_speed"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="?attr/font_size" />

                    <ImageButton
                        android:id="@+id/speaker_speed_i"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:contentDescription="@string/speaker_speed_up_arrow"
                        android:onClick="onChangePref"
                        android:src="@android:drawable/arrow_up_float"
                        android:tint="@color/colorPrimaryDark" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>